--- a/style.css
+++ b/style.css
@@ -1,22 +1,31 @@
+h3 {
+  text-align: center;
+  font-size: 3em;
+}
+
+h4 {
+  text-align: center;
+  font-size: 1.5em;
+}
+
 .grid {
-  border: 1px solid;
-  height: 120px;
-  width: 140px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(7, 110px);
+  grid-template-rows: repeat(6, 110px);
+  width: 770px;
+  height: 660px;
+  margin: 0 auto;
+  justify-content: center;
+  background-color: black;
 }
 
-.grid div {
-  height: 20px;
-  width: 20px;
+.cell {
+  border: 5px solid black;
+  background-color: white;
+  border-radius: 50%;
+  outline: 0.5px solid black;
 }
 
-.player-one {
-  background-color: red;
-  border-radius: 10px;
-}
-
-.player-two {
-  background-color: blue;
-  border-radius: 10px;
+.cell:hover {
+  background-color: rgb(75, 204, 255);
 }
